--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -25,6 +25,12 @@
 .home__headerRight {
   display: flex;
   align-items: center;
+  min-width: 13vh;
+  justify-content: space-between;
+}
+
+.home__headerRight > .MuiSvgIcon-root {
+  margin-right: 20px;
 }
 
 .home__body {
