--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -34,4 +34,12 @@
 }
 
 .home__body {
+  flex: 1;
+  display: flex;
+  margin-top: 10%;
+  flex-direction: column;
+}
+.home__body > img {
+  object-fit: contain;
+  height: 100px;
 }
